--- a/Main/styles.css
+++ b/Main/styles.css
@@ -23,6 +23,16 @@ h1{
     color: white;
 }
 
+canvas{
+    background-color: #1F1F1F;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+}
+
 
 /* Center Title Items */
 
