--- a/Main/styles.css
+++ b/Main/styles.css
@@ -62,6 +62,7 @@ header{
     justify-content: center;
     height: fit-content;
     border-bottom: 1px solid #c2b7b5;
+    background-color: #1F1F1F;
 }
 
 .Header-Item{
@@ -81,6 +82,7 @@ header{
 /* Info Box */
 
 .Info-Box{
+    margin: 0;
     border: 1px solid #c2b7b5;
     border-left: 0px;
     border-right: 0px;
@@ -159,4 +161,16 @@ header{
     margin-Left: 70px;
     margin-right: 70px;
     top: 0;
+}
+
+
+canvas{
+    margin-top: 10px;
+    background-color: #1F1F1F;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
 }
